--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				width: 100%;
 				max-height:210px;
 				min-height:100px;
-				background-image: url('/made.png');
+				background-image: url('made.png');
 				background-position: center center;
 				background-size: contain;
 				background-repeat: no-repeat;
