Cursor pointer so folks know they can clicka the image-a

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 			amp-img {
 				background-color: gray;
 				border: 1px solid black;
+        cursor: pointer;
 			}
 			body amp-carousel amp-image-lightbox {
 				z-index: 11;
